--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,8 @@
-
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/rssystem?serverTimezone=GMT&useSSL=false
+    username : root
+    password : root
+  jpa:
+    hibernate:
+      ddl-auto: create
