--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/rssystem?serverTimezone=GMT&useSSL=false
+    url: jdbc:mysql://localhost:3306/quiz?serverTimezone=GMT&useSSL=false
     username : root
     password : root
   jpa:
